<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.codehaus.btm</groupId>
    <artifactId>btm-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Bitronix Transaction Manager</name>
    <description>
        The Bitronix Transaction Manager (BTM) is a simple but complete implementation of the JTA API.
    </description>
    <inceptionYear>2006</inceptionYear>
    <url>https://github.com/bitronix/btm</url>

    <organization>
        <name>Bitronix Software</name>
        <url>https://github.com/bitronix/btm/wiki</url>
    </organization>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/bitronix/btm/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>git@github.com:laingke/btm.git</url>
        <connection>scm:git:git@github.com/laingke/btm.git</connection>
        <developerConnection>scm:git:git@github.com:laingke/btm.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <id>laingke</id>
            <name>Laing Ke</name>
        </developer>
        <developer>
            <id>lorban</id>
            <name>Ludovic Orban</name>
        </developer>
        <developer>
            <id>brettwooldridge</id>
            <name>Brett Wooldridge</name>
        </developer>
    </developers>

    <properties>
        <revision>3.0.0-20250411</revision>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <jakarta-cdi.version>4.1.0</jakarta-cdi.version>
        <jakarta-ejb.version>4.0.1</jakarta-ejb.version>
        <jakarta-inject.version>2.0.1.MR</jakarta-inject.version>
        <jakarta-jms.version>3.1.0</jakarta-jms.version>
        <jakarta-resource.version>2.1.0</jakarta-resource.version>
        <jakarta-servlet.version>6.1.0</jakarta-servlet.version>
        <jakarta-transaction.version>2.0.1</jakarta-transaction.version>

        <opentelemetry-bom.version>1.47.0</opentelemetry-bom.version>
        <snakeyaml.version>2.4</snakeyaml.version>
        <guava.version>33.4.0-jre</guava.version>

        <logback.version>1.5.18</logback.version>
        <slf4j.version>2.0.17</slf4j.version>

        <cglib.version>3.3.0</cglib.version>
        <javassist.version>3.30.2-GA</javassist.version>

        <tomcat.version>11.0.5</tomcat.version>
        <jetty.version>12.0.16</jetty.version>
        <spring-boot.version>3.3.5</spring-boot.version>

        <mockito.version>5.15.2</mockito.version>
        <junit-jupiter.version>5.10.3</junit-jupiter.version>

        <truffle-api.version>24.1.2</truffle-api.version>

        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
        <asciidoctor-maven-plugin.version>3.1.1</asciidoctor-maven-plugin.version>
        <native-maven-plugin.version>0.10.5</native-maven-plugin.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <surefire.jvm.settings>
            -Xmx256m
            --add-opens java.base/java.lang=ALL-UNNAMED
            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
        </surefire.jvm.settings>
    </properties>

    <modules>
        <module>btm</module>
        <module>btm-jetty-lifecycle</module>
        <module>btm-tomcat-lifecycle</module>
        <module>btm-spring</module>
        <module>btm-spring-boot-starter</module>
        <module>btm-docs</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.codehaus.btm</groupId>
                <artifactId>btm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.btm</groupId>
                <artifactId>btm</artifactId>
                <version>${project.version}</version>
                <classifier>test-sources</classifier>
            </dependency>
            <dependency>
                <groupId>org.codehaus.btm</groupId>
                <artifactId>btm</artifactId>
                <version>${project.version}</version>
                <classifier>sources</classifier>
            </dependency>
            <dependency>
                <groupId>org.codehaus.btm</groupId>
                <artifactId>btm</artifactId>
                <version>${project.version}</version>
                <classifier>javadoc</classifier>
            </dependency>
            <dependency>
                <groupId>org.codehaus.btm</groupId>
                <artifactId>btm</artifactId>
                <type>test-jar</type>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.enterprise</groupId>
                <artifactId>jakarta.enterprise.cdi-api</artifactId>
                <version>${jakarta-cdi.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>jakarta.ejb</groupId>
                <artifactId>jakarta.ejb-api</artifactId>
                <version>${jakarta-ejb.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.inject</groupId>
                <artifactId>jakarta.inject-api</artifactId>
                <version>${jakarta-inject.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.jms</groupId>
                <artifactId>jakarta.jms-api</artifactId>
                <version>${jakarta-jms.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.resource</groupId>
                <artifactId>jakarta.resource-api</artifactId>
                <version>${jakarta-resource.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>${jakarta-servlet.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.transaction</groupId>
                <artifactId>jakarta.transaction-api</artifactId>
                <version>${jakarta-transaction.version}</version>
            </dependency>

            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>${opentelemetry-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>${cglib.version}</version>
            </dependency>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>${javassist.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.tomcat</groupId>
                <artifactId>tomcat-catalina</artifactId>
                <version>${tomcat.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-bom</artifactId>
                <version>${jetty.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>

            <dependency>
                <groupId>org.graalvm.truffle</groupId>
                <artifactId>truffle-api</artifactId>
                <version>${truffle-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <compilerArgs>
                            <arg>-Xlint:unchecked</arg>
                            <arg>-Xlint:deprecation</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>${surefire.jvm.settings}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin.version}</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>btm-@{project.version}</tagNameFormat>
                        <arguments>-Pdist</arguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.asciidoctor</groupId>
                    <artifactId>asciidoctor-maven-plugin</artifactId>
                    <version>${asciidoctor-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>${native-maven-plugin.version}</version>
                    <extensions>true</extensions>
                    <configuration>
                        <agent>
                            <enabled>true</enabled>
                            <defaultMode>Direct</defaultMode>
                            <modes>
                                <direct>
                                    config-output-dir=${project.basedir}/src/main/resources/META-INF/native-image/${project.groupId}/${project.artifactId}
                                </direct>
                            </modes>
                            <options>
                                <callerFilterFiles>
                                    <filterFile>${user.dir}/caller-filter.json</filterFile>
                                </callerFilterFiles>
                                <accessFilterFiles>
                                    <filterFile>${user.dir}/access-filter.json</filterFile>
                                </accessFilterFiles>
                            </options>
                        </agent>
                    </configuration>
                    <executions>
                        <execution>
                            <id>test-native</id>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <phase>test</phase>
                        </execution>
                        <execution>
                            <id>build-native</id>
                            <goals>
                                <goal>compile-no-fork</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>dist</id>
            <modules>
                <module>btm-dist</module>
            </modules>
        </profile>
        <!-- the latest LTS JDK version -->
        <profile>
            <id>java17</id>
            <properties>
                <java.version>17</java.version>
            </properties>
        </profile>
        <!-- the latest JDK version -->
        <profile>
            <id>java20</id>
            <properties>
                <java.version>20</java.version>
            </properties>
        </profile>
    </profiles>

</project>
